# pts-swe-af

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.local.yml  docker-compose.streaming.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements-docker.txt  requirements.txt
scripts/: compare_build_costs.py  measure_build_times.py  run_benchmark_suite.py  verify_model_defaults.py
swe_af/: app.py  approval.py
swe_af/execution/: __init__.py  _replanner_compat.py  ci_gate.py  coding_loop.py  dag_executor.py  schemas.py
swe_af/fast/: app.py
tests/: test_architect_prd_polling.py  test_baseline_instrumentation_app.py  test_baseline_instrumentation_dag.py  test_benchmark_suite.py  test_ci_gate.py  test_coding_loop_trivial_fast_path.py  test_compare_build_costs.py  test_integration_advisor_escalation_flow.py  test_integration_issue_advisor_with_trivial_bypass.py  test_integration_per_role_timeouts.py  test_integration_planning_parallel_with_timeouts.py  test_integration_planning_parallelization.py  test_integration_sprint_planner_trivial_to_coding_loop.py  test_integration_trivial_end_to_end.py  test_integration_trivial_fast_path_with_timeouts.py  test_issue_advisor_confidence_escalation.py  test_max_coding_iterations.py  test_measure_build_times.py  test_model_config.py  test_model_downgrade.py  test_model_downgrade_sprint_planner.py  test_per_role_turn_budgets.py  test_planning_parallelism.py  test_prompt_compression_coder.py  test_prompt_compression_sprint_planner.py  test_resolve.py  test_trivial_schema_field.py
(+36 files in other folders)
