[project]
name = "swe-af"
version = "0.1.0"
description = "Autonomous SWE agent node for AgentField"
requires-python = ">=3.12"
dependencies = [
    "agentfield>=0.1.9",
    "pydantic>=2.0",
    "httpx>=0.25",
    "aiohttp>=3.9",
    "python-dotenv>=1.0",
    # Compatibility pin: newer SDK builds have surfaced
    # "Unknown message type: rate_limit_event" during streaming.
    "claude-agent-sdk==0.1.20",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
swe-af = "swe_af.app:main"
swe-fast = "swe_af.fast.app:main"

[tool.setuptools.packages.find]
include = ["swe_af*"]
